[gd_scene load_steps=20 format=3 uid="uid://bcdk1lj6enq3l"]

[ext_resource type="Script" path="res://core/ui/card_ui/launch/game_launch_menu.gd" id="1_u3ehs"]
[ext_resource type="Texture2D" uid="uid://d1mksukdkqorr" path="res://assets/images/placeholder-grid-banner.png" id="2_oae7b"]
[ext_resource type="PackedScene" uid="uid://c6fg6uvng0ovi" path="res://core/systems/input/input_watcher.tscn" id="2_slsfk"]
[ext_resource type="PackedScene" uid="uid://2tdbi1v6qb6h" path="res://core/ui/components/loading02.tscn" id="3_dp3a3"]
[ext_resource type="Resource" uid="uid://dav2b3n384cso" path="res://assets/state/states/game_launcher.tres" id="3_w7th1"]
[ext_resource type="Resource" uid="uid://bcr6c0281lb5b" path="res://assets/state/state_machines/menu_state_machine.tres" id="4_aqvfw"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="5_4ja2v"]
[ext_resource type="Texture2D" uid="uid://bec6fhiswf6ve" path="res://assets/ui/icons/gamepad-bold.svg" id="5_ewj68"]
[ext_resource type="PackedScene" uid="uid://bw8113ocotx2r" path="res://core/systems/effects/fade_effect.tscn" id="7_ch3qu"]
[ext_resource type="Texture2D" uid="uid://d2ipfga47yjju" path="res://assets/images/empty-grid-logo.png" id="12_01uv6"]
[ext_resource type="PackedScene" uid="uid://c71ayw7pcw6u6" path="res://core/ui/components/card_button.tscn" id="14_3h1st"]
[ext_resource type="PackedScene" uid="uid://cr83fmlociwko" path="res://core/ui/components/card_icon_button.tscn" id="15_f3ktw"]
[ext_resource type="PackedScene" uid="uid://b76dvfuouhlwd" path="res://core/systems/state/state_updater.tscn" id="15_lat8h"]
[ext_resource type="Resource" uid="uid://cx8u1y5j7vyss" path="res://assets/state/states/gamepad_settings.tres" id="17_7ydn0"]
[ext_resource type="Resource" uid="uid://3vw3bk76d88w" path="res://assets/state/states/game_settings.tres" id="19_b21vy"]
[ext_resource type="Texture2D" uid="uid://dj1ohb74chydb" path="res://assets/ui/icons/round-delete-forever.svg" id="21_agq5k"]

[sub_resource type="Animation" id="Animation_ou6f5"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfglc"]
_data = {
"fade_in": SubResource("Animation_ou6f5")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7fb8y"]
bg_color = Color(1, 0.47451, 0.776471, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GameLaunchMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u3ehs")

[node name="InputWatcher" parent="." instance=ExtResource("2_slsfk")]
stop_propagation = true
action = "ogui_east"

[node name="StateUpdater" parent="InputWatcher" instance=ExtResource("15_lat8h")]
state_machine = ExtResource("4_aqvfw")
action = 2
on_signal = "input_released"

[node name="StateWatcher" parent="." instance=ExtResource("5_4ja2v")]
state = ExtResource("3_w7th1")

[node name="FadeEffect" parent="StateWatcher" node_paths=PackedStringArray("target") instance=ExtResource("7_ch3qu")]
target = NodePath("../..")
on_signal = "state_entered"
fade_out_signal = "state_exited"
on_signal = "state_entered"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="BannerTexture" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.666667)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_oae7b")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/BannerTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingAnimation" parent="VBoxContainer/BannerTexture/CenterContainer" instance=ExtResource("3_dp3a3")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/BannerTexture"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_yfglc")
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"LightPanel"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="LogoTexture" type="TextureRect" parent="VBoxContainer/PanelContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(533.333, 300)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("12_01uv6")
expand_mode = 1
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="LaunchButton" parent="CenterContainer/HBoxContainer" instance=ExtResource("14_3h1st")]
unique_name_in_owner = true
layout_mode = 2
text = "Play Now"

[node name="ExtraMenu" type="PanelContainer" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_type_variation = &"GameLaunchButtons"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/HBoxContainer/ExtraMenu"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer"]
layout_mode = 2

[node name="GamepadButton" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer" instance=ExtResource("15_f3ktw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
texture = ExtResource("5_ewj68")

[node name="StateUpdater" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer/GamepadButton" instance=ExtResource("15_lat8h")]
state_machine = ExtResource("4_aqvfw")
state = ExtResource("17_7ydn0")
on_signal = "player_button_up"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 4

[node name="SettingsButton" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer" instance=ExtResource("15_f3ktw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2

[node name="StateUpdater" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer/SettingsButton" instance=ExtResource("15_lat8h")]
state_machine = ExtResource("4_aqvfw")
state = ExtResource("19_b21vy")
on_signal = "button_up"

[node name="DeleteContainer" type="MarginContainer" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer/DeleteContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer/DeleteContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 4

[node name="DeleteButton" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer/DeleteContainer/HBoxContainer" instance=ExtResource("15_f3ktw")]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
texture = ExtResource("21_agq5k")

[node name="ProgressContainer" type="MarginContainer" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer/ProgressContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer/ProgressContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 4

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/HBoxContainer/ExtraMenu/MarginContainer/HBoxContainer/ProgressContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_7fb8y")
value = 50.0
rounded = true
